<resources>
    <string name="app_name">KCALCULATE</string>
    <string name="facebook_app_id">2340245359405923</string>
    <string name="fb_login_protocol_scheme">fb2340245359405923</string>
    <string name="hint_email">Email</string>
    <string name="description_app_logo">App logo</string>
    <string name="hint_password">Password</string>
    <string name="button_text_login">LOGIN</string>
    <string name="link_to_register_activity_text">Or make an account</string>
    <string name="hint_nickname">Nickname</string>
    <string name="text_connection_failure">Request failed. Please check your internet connection and try again</string>
    <string name="error_nickname_input">Enter your nickname</string>
    <string name="error_password_input">Enter your password</string>
    <string name="button_text_register_with_email">Register with your email</string>
    <string name="link_text_go_to_login">Already have an account? Click here!</string>
    <string name="hint_avatar_link">Avatar image link (optional)</string>
    <string name="confirm">Confirm</string>
    <string name="radio_button_text_lose_weight">Lose weight</string>
    <string name="radio_button_text_maintain_weight">Maintain weight</string>
    <string name="radio_button_text_gain_weight">Gain weight</string>
    <string name="text_goal_title">Your goal is to</string>
    <string name="text_activity_level_title">Your daily activity level is</string>
    <string name="radio_button_text_activity_very_low">Very low</string>
    <string name="radio_button_text_activity_low">Low</string>
    <string name="radio_button_text_activity_moderate">Moderate</string>
    <string name="radio_button_text_activity_high">High</string>
    <string name="radio_button_text_activity_very_high">Very high</string>
    <string name="hint_weight">Weight</string>
    <string name="radio_button_text_gender_male">Male</string>
    <string name="radio_button_text_gender_female">Female</string>
    <string name="text_gender_title">Your biological gender</string>
    <string-array name="height_units">
        <item>cm</item>
        <item>ft</item>
    </string-array>
    <string-array name="weight_units">
        <item>kg</item>
        <item>lbs</item>
    </string-array>
    <string name="text_select_fat_percentage">Select your body fat percentage</string>
    <string name="button_text_proceed">Proceed</string>
    <string name="error_email_input">Enter your email</string>
    <string name="hint_height_cm">Height (cm)</string>
    <string name="hint_height_in">Height (in)</string>
    <string name="hint_height_ft">Height (ft)</string>
    <string name="error_height_input">Enter your height</string>
    <string name="button_text_register">Register</string>
    <string name="error_weight_input">Enter your weight</string>
    <string name="calculate_goals_dialog_message">Now the app will help you calculate your recommended daily nutrients intake. If you don\'t want this app to calculate it for you, you can skip the process and set it yourself by clicking \"SKIP\"</string>
    <string name="calculate_goals_dialog_positive_button">Don\'t skip</string>
    <string name="calculate_goals_dialog_negative_button">Skip</string>
    <string name="error_gender_button">Select your biological gender</string>
    <string name="calculate_goals_label_nutrients_limit">Your recommended nutrients limit</string>
    <string name="text_calorie_level_description">If you disagree with this estimate, feel free to correct it</string>
    <string name="button_text_go_back">GO BACK</string>
    <string name="hint_find_food">Enter food\'s name</string>
    <string name="other_actions">Other actions</string>
    <string name="link_text_create_meal">Create meal</string>
    <string name="link_text_scan_barcode">Scan barcode</string>
    <string name="text_carbs_title">Carbs (g)</string>
    <string name="text_fat_title">Fats (g)</string>
    <string name="text_protein_title">Protein (g)</string>
    <string name="text_kcalper100_title">Kcal</string>
    <string name="hint_meal_weight">Weight (g)</string>
    <string name="button_text_record_meal">RECORD MEAL</string>
    <string name="error_meal_weight_input">Enter meal weight</string>
    <string name="link_to_forgot_password_text">Click here if you forgot your password</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tab_text_my_meals">MY MEALS</string>
    <string name="tab_text_all_meals">ALL MEALS</string>
    <string name="record_meal_placeholder">Search for meals using the search box above</string>
    <string name="text_home_eaten">Eaten</string>
    <string name="text_home_goal">Goal</string>
    <string name="text_home_left">Left</string>
    <string name="text_home_kcal_left">Kcal left</string>
    <string name="text_home_carbs">Carbs</string>
    <string name="text_home_fat">Fat</string>
    <string name="text_home_protein">Protein</string>
    <string name="text_zero">0</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_menu_home">Home</string>
    <string name="title_menu_profile">Profile</string>
    <string name="nav_text_home">Home</string>
    <string name="nav_text_profile">Profile</string>
    <string name="nav_text_friends">Friends</string>
    <string name="nav_text_logout">Log out</string>
    <string name="nav_text_goals">Goals</string>
    <string name="nav_text_credits">Credits</string>
    <string name="nav_text_sync">Synchronize</string>
    <string name="title_menu_goals">Goals</string>
    <string name="text_created_by">Created by Cezary Szmurło</string>
    <string name="text_credits">Icons designed by\nwww.freepik.com\n icon8.com</string>
    <string name="button_text_cancel">Cancel</string>
    <string name="button_text_create">Create</string>
    <string name="hint_meal_name">Food\'s name</string>
    <string name="hint_meal_protein">Grams of protein in 100g of the meal</string>
    <string name="hint_meal_fat">Grams of fat in 100g of the meal</string>
    <string name="hint_meal_carbs">Grams of carbs in 100g of the meal</string>
    <string name="hint_meal_kcal">Kcal in 100g of the meal</string>
    <string name="error_meal_name_input">Enter meal\'s name</string>
    <string name="error_meal_kcal_input">Enter meal\'s kcal per 100g value</string>
    <string name="error_meal_carbs_input">Enter meal\'s carbs per 100g value</string>
    <string name="error_meal_fat_input">Enter meal\'s fat per 100g value</string>
    <string name="error_meal_protein_input">Enter meal\'s protein per 100g value</string>
    <string name="hint_find_people">Enter person\'s nickname</string>
    <string name="friends_placeholder_people_default">Search for people using the search box above</string>
    <string name="tab_text_friends">Friends</string>
    <string name="tab_text_people">People</string>
    <string name="calculate_goals_description_activity_very_low">If you have a sitting job</string>
    <string name="calculate_goals_description_activity_low">If your job involves a little bit of moving or you do a little bit of sports</string>
    <string name="calculate_goals_description_activity_moderate">If your regularly do sports</string>
    <string name="calculate_goals_description_activity_high">If your job is physically heavy or you take sports very seriously</string>
    <string name="calculate_goals_description_activity_very_high">For heavy-duty workers and people who work out every day</string>
    <string name="calculate_goals_label_calorie_limit">Kcal</string>
    <string name="calculate_goals_label_carbs_limit">Carbs</string>
    <string name="calculate_goals_label_fat_limit">Fat</string>
    <string name="calculate_goals_label_protein_limit">Protein</string>
    <string name="description_user_avatar">User\'s avatar</string>
    <string name="button_text_friend_invitation_accept">Accept</string>
    <string name="button_text_friend_invitation_reject">Reject</string>
    <string name="button_text_friend_invitation_sent">Invitation sent…</string>
    <string name="button_text_friend_unblock">Unblock</string>
    <string name="button_text_friend_unfriend">Unfriend</string>
    <string name="button_text_friend_block">Block</string>
    <string name="tab_text_pending">Pending</string>
    <string name="tab_text_blocked">Blocked</string>
    <string name="button_text_friend_befriend">Befriend</string>
    <string name="record_meal_placeholder_user_meals_empty">No items to display. All meals you record will be shown here for a fast access!</string>
    <string name="record_meal_placeholder_all_meals_empty">No meals found. Search for another phrase or try on of the options below!</string>
    <string name="meal_entry_success">Meal recorded successfully!</string>
    <string name="record">Record</string>
    <string name="text_barcode_not_found_dialog_title">Barcode not found</string>
    <string name="text_barcode_not_found_message">You can add nutrition info about this product, so that you and others can use it later!</string>
    <string name="create_meal_barcode">Barcode: %1$s</string>
    <string name="text_barcode_found_dialog_title">Barcode found!</string>
    <string name="friends_placeholder_blocked_empty">This list is empty</string>
    <string name="friends_placeholder_pending_empty">This list is empty</string>
    <string name="friends_placeholder_people_empty">No people found</string>
    <string name="friends_placeholder_friends_empty">This list is empty</string>
    <string name="toolbar_action_search">Search</string>
    <string name="profile_email">E-mail:</string>
    <string name="profile_streak">Streak:</string>
    <string name="profile_points">Points:</string>
    <string name="profile_text_limits">Daily nutriment goals</string>
    <string name="profile_text_limits_lower">Lower:</string>
    <string name="profile_text_limits_goal">Goal:</string>
    <string name="profile_text_limits_upper">Upper:</string>
    <string name="profile_button_text_recalculate">RECALCULATE GOALS</string>
    <string name="profile_private_description"><![CDATA[Your account is private. This means other users won\'t see you when searching for friends in <b><i>Friends</i></b> tab. To change it, click the button below]]></string>
    <string name="profile_public_description"><![CDATA[Your account is public. This means other users will be able to see you when searching for friends in <b><i>Friends</i></b> tab and send you friend requests. To change it, click the button below]]></string>
    <string name="profile_button_text_make_private">MAKE MY ACCOUNT PRIVATE</string>
    <string name="profile_button_text_make_public">MAKE MY ACCOUNT PUBLIC</string>
    <string name="profile_limits">%1$.0f kcal | Carbs: %2$.0f | Fat: %3$.0f | Protein: %4$.0f</string>
    <string name="profile_text_level_points">%1$d/%2$d</string>
    <string name="calculate_goals_label_read_rows">Read rows as lower limit / goal / upper limit</string>
    <string name="button_text_try_again">TRY AGAIN</string>
    <string name="tab_text_goal">GOAL</string>
    <string name="tab_text_ranking">RANKING</string>
    <string name="goals_create_goal_header">Set your monthly goal!</string>
    <string name="goals_create_goal_text_lose">I want to lose</string>
    <string name="goals_create_goal_text_gain">I want to gain</string>
    <string name="goals_create_goal_text_kg">kilograms</string>
    <string name="goals_invite_friends_button_text">Invite friends to participate</string>
</resources>