<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calculatenutrientgoals.fragments.QuizFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_goal_title"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <RadioButton
                android:id="@+id/calculate_goals_radio_button_goal_lose_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_text_lose_weight" />

            <RadioButton
                android:id="@+id/calculate_goals_radio_button_goal_maintain_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_button_text_maintain_weight" />

            <RadioButton
                android:id="@+id/calculate_goals_radio_button_goal_gain_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_text_gain_weight" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_activity_level_title"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/calculate_goals_radio_button_activity_level_very_low"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_text_activity_very_low" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculate_goals_description_activity_very_low" />

            <RadioButton
                android:id="@+id/calculate_goals_radio_button_activity_level_low"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_button_text_activity_low" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculate_goals_description_activity_low" />

            <RadioButton
                android:id="@+id/calculate_goals_radio_button_activity_level_moderate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_text_activity_moderate" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculate_goals_description_activity_moderate" />

            <RadioButton
                android:id="@+id/calculate_goals_radio_button_activity_level_high"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_text_activity_high" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculate_goals_description_activity_high" />

            <RadioButton
                android:id="@+id/calculate_goals_radio_button_activity_level_very_high"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_text_activity_very_high" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculate_goals_description_activity_very_high" />
        </RadioGroup>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>