<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingTop="56dp"
        android:paddingEnd="24dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/description_app_logo"
            android:src="@drawable/ic_launcher_background"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/hint_nickname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_input_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/login_button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/round_button_shape"
            android:text="@string/button_text_login"
            android:layout_marginBottom="24dp"
            />

        <!-- padding added to make it more clickable-->
        <TextView
            android:id="@+id/login_link_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/link_to_register_activity_text"
            android:textSize="16sp"
            android:padding="20dp"
            android:layout_marginBottom="72dp"/>
        <TextView
            android:id="@+id/login_text_connection_failure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/error"
            android:text="@string/text_connection_failure"
            android:gravity="center_horizontal"
            android:visibility="gone"/>
    </LinearLayout>

</ScrollView>