<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="24dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="24dp"
    android:layout_marginBottom="16dp"
    tools:context=".ui.createmeal.CreateMealActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/create_meal_button_create"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_meal_layout_name"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_meal_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_meal_name"
                android:inputType="textCapSentences"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_meal_layout_kcal"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_meal_input_kcal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_meal_kcal"
                android:inputType="numberDecimal"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_meal_layout_carbs"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_meal_input_carbs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_meal_carbs"
                android:inputType="numberDecimal"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_meal_layout_fat"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_meal_input_fat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_meal_fat"
                android:inputType="numberDecimal"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_meal_layout_protein"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_meal_input_protein"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_meal_protein"
                android:inputType="numberDecimal"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/create_meal_barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_meal_barcode"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:visibility="gone"/>
    </LinearLayout>

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/create_meal_button_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button_shape"
        android:text="@string/button_text_create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>