<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calculatenutrientgoals.fragments.MeasurementsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/calculate_goals_input_layout_height_cm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/calculate_goals_input_height_cm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_height_cm"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/calculate_goals_input_layout_height_ft"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/calculate_goals_input_height_ft"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_height_ft"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/calculate_goals_input_layout_height_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/calculate_goals_input_height_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_height_in"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/calculate_goals_spinner_unit_height"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.6"
                android:entries="@array/height_units" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:weightSum="4">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/calculate_goals_input_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_weight"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/calculate_goals_spinner_unit_weight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.6"
                android:entries="@array/weight_units" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_gender_title"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/calculate_goals_radio_button_gender_male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_text_gender_male" />

            <RadioButton
                android:id="@+id/calculate_goals_radio_button_gender_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_text_gender_female" />
        </RadioGroup>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>